--- a/hotels.html
+++ b/hotels.html
@@ -41,7 +41,7 @@
   </nav>
    
     <h1 style="color:rgb(4, 15, 63);">PLACE?</h1>
-    <form action="abc.html" class="inline" 
+    <form action="index.html" class="inline" 
     >
     <button class="float-center submit-button;" >Home</button>
     </form>
