--- a/info.html
+++ b/info.html
@@ -84,7 +84,7 @@
   </nav>
   <h1>Hotel Booking Page</h1>
   
-    <form action="abc.html" class="inline" 
+    <form action="index.html" class="inline" 
     >
     <button class="float-left submit-button;" >Home</button>
 
